Update env.example to include missing environment variables for development and production

--- a/env.example
+++ b/env.example
@@ -1,14 +1,18 @@
 # This file is used to set environment variables for different Flask environments.
 # Each section corresponds to a different environment.
-# The variables can be loaded into the application using a library like python-dotenv.
+
 
 #FLASK_ENV=testing
-#SECRET_KEY=test-secret-key
 #DATABASE_URL=sqlite:///:memory:
+#USERS_SERVICE_URL=None
+#INTERNAL_REQUEST_SECRET=testging-interal-secret
+#JWT_SECRET=testging-jwt_secret
 
 #FLASK_ENV=development
-#SECRET_KEY=dev-secret-key
 #DATABASE_URL=sqlite:///dev.db
+#USERS_SERVICE_URL=None
+#INTERNAL_REQUEST_SECRET=develop-interal-secret
+#JWT_SECRET=develop-jwt_secret
 
 #FLASK_ENV=staging
 #DATABASE_URL=postgresql://auth:password@auth_db/auth_staging
@@ -17,8 +21,9 @@
 #JWT_SECRET=staging-jwt_secret
 
 #FLASK_ENV=production
-#SECRET_KEY=prod-secret-key
 #DATABASE_URL=postgresql://user:pass@template_db/template_prod
-#OTHER_SERVICE_URL=http://other_service:5001
+#USERS_SERVICE_URL=http://users_service:5000
+#INTERNAL_REQUEST_SECRET=production-interal-secret
+#JWT_SECRET=production-jwt_secret
 
 
