Update env.example to include LOG_LEVEL for testing, development, and staging environments; correct DATABASE_URL for staging

--- a/env.example
+++ b/env.example
@@ -3,19 +3,22 @@
 
 
 #FLASK_ENV=testing
+#LOG_LEVEL=DEBUG
 #DATABASE_URL=sqlite:///:memory:
 #USERS_SERVICE_URL=None
 #INTERNAL_REQUEST_SECRET=testging-interal-secret
 #JWT_SECRET=testging-jwt_secret
 
 #FLASK_ENV=development
+#LOG_LEVEL=DEBUG
 #DATABASE_URL=sqlite:///dev.db
 #USERS_SERVICE_URL=None
 #INTERNAL_REQUEST_SECRET=develop-interal-secret
 #JWT_SECRET=develop-jwt_secret
 
 #FLASK_ENV=staging
-#DATABASE_URL=postgresql://auth:password@auth_db/auth_staging
+#LOG_LEVEL=DEBUG
+#DATABASE_URL=postgresql://staging:password@db_service/auth_staging
 #USERS_SERVICE_URL=http://users_service:5000
 #INTERNAL_REQUEST_SECRET=staging-interal-secret
 #JWT_SECRET=staging-jwt_secret
