--- a/env.example
+++ b/env.example
@@ -5,28 +5,28 @@
 #FLASK_ENV=testing
 #LOG_LEVEL=DEBUG
 #DATABASE_URL=sqlite:///:memory:
-#USERS_SERVICE_URL=None
-#INTERNAL_REQUEST_SECRET=testging-interal-secret
+#USER_SERVICE_URL=None
+#INTERNAL_AUTH_TOKEN=testging-interal-secret
 #JWT_SECRET=testging-jwt_secret
 
 #FLASK_ENV=development
 #LOG_LEVEL=DEBUG
 #DATABASE_URL=sqlite:///dev.db
-#USERS_SERVICE_URL=None
-#INTERNAL_REQUEST_SECRET=develop-interal-secret
+#USER_SERVICE_URL=None
+#INTERNAL_AUTH_TOKEN=develop-interal-secret
 #JWT_SECRET=develop-jwt_secret
 
 #FLASK_ENV=staging
 #LOG_LEVEL=DEBUG
 #DATABASE_URL=postgresql://staging:password@db_service/auth_staging
-#USERS_SERVICE_URL=http://users_service:5000
-#INTERNAL_REQUEST_SECRET=staging-interal-secret
+#USER_SERVICE_URL=http://users_service:5000
+#INTERNAL_AUTH_TOKEN=staging-interal-secret
 #JWT_SECRET=staging-jwt_secret
 
 #FLASK_ENV=production
 #DATABASE_URL=postgresql://user:pass@template_db/template_prod
-#USERS_SERVICE_URL=http://users_service:5000
-#INTERNAL_REQUEST_SECRET=production-interal-secret
+#USER_SERVICE_URL=http://users_service:5000
+#INTERNAL_AUTH_TOKEN=production-interal-secret
 #JWT_SECRET=production-jwt_secret
 
 
