--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,12 @@
-pytest
-pytest-cov
-pylint
-pycodestyle
+# Code formatting and linting
+black>=23.0.0
+flake8>=6.0.0
+flake8-docstrings>=1.7.0
+flake8-import-order>=0.18.0
+
+# Testing (if not already present)
+pytest>=7.0.0
+pytest-cov>=4.0.0
+
+# Pre-commit hooks (optional)
+pre-commit>=3.0.0
