--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,7 @@ name: Flask service
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main, guardian_staging ]
   pull_request:
     branches: [ "main" ]
 
