--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,8 @@ black>=23.0.0
 flake8>=6.0.0
 flake8-docstrings>=1.7.0
 flake8-import-order>=0.18.0
+pytlint
+pycodestyle
 
 # Testing (if not already present)
 pytest>=7.0.0
